# pipelined_vs_vectorized

./: CMakeLists.txt  LICENSE  logfile  requirements.txt
data/: data_generator.py
logs/: cat_outputs.py  l0.txt  l1.txt  l10.txt  l100.txt  l25.txt  l50.txt  l75.txt  l90.txt  l99.txt  o0.txt  o1.txt  o10.txt  o100.txt  o25.txt  o50.txt  o75.txt  o90.txt  o99.txt
scripts/: bench.sh  build.sh  test.sh  test_all.sh
src/common/: custom_bitset.h  store.h  utils.h
src/pipelined_executor/: pipelined_executor.cpp  pipelined_executor_template.cpp
src/vectorized_executor/: vectorized_executor.cpp  vectorized_executor_s50_p7.cpp  vectorized_executor_s50_p8.cpp  vectorized_executor_template.cpp
